# fantasypl

./: pyproject.toml  setup.cfg
src/fantasypl/: client.py  constants.py  exceptions.py  models.py
tests/: test_fantasypl.py
