[tool.poetry]
name = "fantasypl"
version = "0.1.0"
description = ""
authors = ["Idar Bergli <idar.bergli@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.3"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
pytest-xdist = "^2.1.0"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^20.8b1"
isort = "^5.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
